Conclusion and abstract done, only method and read through left!

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-Determining the crystal structure of materials is important to understand how these materials behave, a crucial part for developing e.g. medicine, and electronics. Common ways to analyse crystal structure is diffraction experiments, where X-ray diffraction is especially well suited because of the small wavelength on the order of the lattice parameters. The experiment conducted in this report specifically uses a type of X-ray diffraction called powder X-ray diffraction.
+Determining the crystal structure of materials is important to understand how these materials behave, a crucial part for developing e.g. medicine, and electronics. Common ways to analyse crystal structure is diffraction experiments, where X-ray diffraction is especially well suited because of the small wavelength on the order of the lattice parameters. The experiment conducted in this report specifically uses a type of X-ray diffraction called powder X-ray diffraction. The goal of this report is to determine the structure and size of to unknown samples. 
 
 \section{Theory}
 \subsection{Crystal Lattice Structure}
@@ -49,27 +49,27 @@ Due to the structure of different types of lattices, the diffraction pattern may
     F(hkl) = \sum_{m} f_m \exp\left( 2\pi i (u_m h + v_m k + w_m l) \right). 
     \label{eq:structurefunction}
 \end{equation}
-where $f_m$ is the atomic form factor and $(u_m,v_m,w_m)$ are the fractional coordinates of atoms in the unit cell. for a bcc we know that we have the fractional coordinates (0,0,0) for each corner and (1/2,1/2,1/2). and for an fcc we have the (0,0,0) for each corner,  (0,1/2,1/2), (1/2,0,1/2) and (1/2,1/2,0). In the equation above h,k,l is the value of the miller index. Putting all of this together we know that we will obtain diffraction peaks only if $F(hkl)\neq0$ \cite{solidstatephysics2025}. 
+where $f_m$ is the atomic form factor and $(u_m,v_m,w_m)$ are the fractional coordinates of atoms in the unit cell. for a BCC we know that we have the fractional coordinates (0,0,0) for each corner and (1/2,1/2,1/2). and for an FCC we have the (0,0,0) for each corner,  (0,1/2,1/2), (1/2,0,1/2) and (1/2,1/2,0). In the equation above h,k,l is the value of the miller index. Putting all of this together we know that we will obtain diffraction peaks only if $F(hkl)\neq0$ \cite{solidstatephysics2025}. 
 
-From this we can evaluate which planes we will see from bcc and fcc. From \autoref{eq:structurefunction} we can see that the points located at (0,0,0) will always yield a non-zero result. However, if we start looking at the bcc crystal we can obtain the following:
+From this we can evaluate which planes we will see from BCC and FCC. From \autoref{eq:structurefunction} we can see that the points located at (0,0,0) will always yield a non-zero result. However, if we start looking at the BCC crystal we can obtain the following:
 \begin{align}
     F(hkl) &= f_m \exp\left[ 2\pi i \left(0{h}+0{k}+0{l}\right) \right]+ f_m \exp\left[ 2\pi i \left(\frac{h}{2} + \frac{k}{2} + \frac{l}{2}\right) \right]=f_m\left[1+ \exp\left( 2\pi i \frac{h+k+l}{2} \right)\right] \\
     &\text{if $F(hkl)\neq0$ } \implies -1\neq \exp\left( 2\pi i \frac{h+k+l}{2} \right) \implies \frac{h+k+l}{2} \neq n+\frac{1}{2} \text{, where n=1,2,3...} \\
     &\implies h+k+l\neq 2n+1.
 \end{align}
-Above we used Euler's identity which says $\exp(i\pi (n+1/2)+1=0$. We have thus shown that for the bcc structure wont show any planes where $h+k+l$ are odd. For the fcc we get the following instead:
+Above we used Euler's identity which says $\exp(i\pi (n+1/2)+1=0$. We have thus shown that for the BCC structure wont show any planes where $h+k+l$ are odd. For the FCC we get the following instead:
 \begin{align}
     F(hkl) &= f_m + f_m \exp\left[ 2\pi i \left(\frac{h}{2} + \frac{k}{2}\right) \right]+f_m \exp\left[ 2\pi i \left(\frac{h}{2} + \frac{l}{2}\right) \right]+f_m \exp\left[ 2\pi i \left(\frac{k}{2} + \frac{l}{2}\right) \right]\\
     &\text{if $F(hkl)\neq0$ } \implies -1\neq \exp\left[ 2\pi i \left(\frac{h}{2} + \frac{k}{2}\right) \right]+ \exp\left[ 2\pi i \left(\frac{h}{2} + \frac{l}{2}\right) \right]+ \exp\left[ 2\pi i \left(\frac{k}{2} + \frac{l}{2}\right) \right]
 \end{align}
-As shown before, we can see above if one of $h,k,l$ is even and the other are odd (or vice versa) then we get $-1\neq1-1-1$ which is not allowed. However if all $h,k,l$ are even or odd we obtain $-1\neq1+1+1$ which is true. Thus the (h,k,l) is always all odd or all even for the fcc. 
+As shown before, we can see above if one of $h,k,l$ is even and the other are odd (or vice versa) then we get $-1\neq1-1-1$ which is not allowed. However if all $h,k,l$ are even or odd we obtain $-1\neq1+1+1$ which is true. Thus the (h,k,l) is always all odd or all even for the FCC. 
 
 The order of the peaks we will see will be ordered as 
 \begin{equation}
     \sqrt{h^2+k^2+l^2},
     \label{eq:ordering}
 \end{equation}  
-where h, k and l are the miller indices of that specific plane. Thus, for a bcc crystal the peaks will be in the order (110), (200), (211), (220) and so on. For the fcc the peaks will be (111), (200), (220), (311), (222) and so on.  
+where h, k and l are the miller indices of that specific plane. Thus, for a BCC crystal the peaks will be in the order (110), (200), (211), (220) and so on. For the FCC the peaks will be (111), (200), (220), (311), (222) and so on.  
 
 \subsection{Powder X-ray Diffraction}
 Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures.
