--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -7,15 +7,15 @@ In \autoref{fig:result_figure} one can see the given spectrum together with gaus
     \centering
     \begin{subfigure}[b]{0.89\textwidth} 
         \includegraphics[width=\textwidth]{Figures/gaussian_sample1.pdf}
-        \subcaption{This is the first subfigure.}
+        \subcaption{This is the spectrum from sample 1.}
         \label{fig:subfigure1}
     \end{subfigure}
     \begin{subfigure}[b]{0.89\textwidth} 
         \includegraphics[width=\textwidth]{Figures/gaussian_sample2.pdf}
-        \subcaption{This is the second subfigure.}
+        \subcaption{This is the spectrum from sample 2.}
         \label{fig:subfigure2}
     \end{subfigure}
-    \caption{This figure shows two subfigures with separate captions.}
+    \caption{These plots display the spectrum gathered from the detector. It is evident that the sharp peaks in both plots are caused by hot pixels, damaged detector elements that produce spurious signals.}
     \label{fig:result_figure}
 \end{figure}
 
@@ -51,9 +51,10 @@ In \autoref{fig:result_figure} one can see the given spectrum together with gaus
     \label{tab:sample2}
 \end{table}
 
-Using peak 1 from the first sample and $n=1$, the plane (111) we obtain a spacing $a=\SI{4.0213(0.0026)}{\angstrom}$ which coincides with the material Au using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The first peak coincides with the plane (111) as seen in \autoref{eq:ordering} and all indices are odd which is must be true since Au is a fcc. This verifies this result. 
 
-Using peak 2 from the second sample and $n=1$, the plane (110) we obtain a spacing $a=\SI{2.8484(0.0030)}{\angstrom}$ which coincides with the material Fe using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The second peak coincides with the plane (110) as seen in \autoref{eq:ordering}, also the sum of the miller indices is even which must be tru for a bcc such as Fe, verifying this result. 
+Using peak 1 from the first sample and $n=1$, the plane (111) we obtain a spacing $a=\SI{4.0213(0.0026)}{\angstrom}$ which coincides with the material Au, with $a=\SI{4.065}{\angstrom}$, using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The first peak coincides with the plane (111) as seen in \autoref{eq:ordering} and all indices are odd which is must be true since Au is a FCC. This verifies this result. 
+
+Using peak 2 from the second sample and $n=1$, the plane (110) we obtain a spacing $a=\SI{2.8484(0.0030)}{\angstrom}$ which coincides with the material Fe, with $a=\SI{2.856}{\angstrom}$, using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The second peak coincides with the plane (110) as seen in \autoref{eq:ordering}, also the sum of the miller indices is even which must be true for a BCC such as Fe, verifying this result. 
 
 
 Using \autoref{eq:Scherre}, we obtain the following particle sizes as shown in \autoref{tab:Scherre1} and \autoref{tab:Scherre2}. The mean particle size for Sample 1 is \SI[scientific-notation=false]{13.44(0.4)}{\nano\meter}, and for Sample 2, it is \SI[scientific-notation=false]{11.2(0.6)}{\nano\meter}.
