--- a/PXRD_report/Textfiles/4.Discussion.tex
+++ b/PXRD_report/Textfiles/4.Discussion.tex
@@ -1,4 +1,7 @@
 \section{Discussion}
+The uncertainties of the Gaussian fit can be seen in \autoref{tab:sample1} and \autoref{tab:sample2}. We can see that the calculated lattice constant for Sample 1, which is made of gold, includes the tabulated value within its uncertainty. However, this is not true for the second sample, made of iron. The calculated lattice constant for Sample 2 deviates by only 1\% from the tabulated value. Thus, one can argue that this is close enough for us to validate the result. The small deviation in Sample 2 might be due to other errors that have not been accounted for, such as errors in the X-ray energy and measurement equipment. Errors such as beam divergence, finite spectral bandwidth, and detector resolution also contribute to uncertainties.
+
+
 In \autoref{fig:result_figure}, we can identify the peaks using the theory derived above. Since we know that Sample 1 was gold, which has an FCC structure, the first peak corresponds to the (111) plane, the second peak to the (200) plane, the third peak to the (220) plane, the fourth peak to the (331) plane, and the fifth peak to the (222) plane. For the second sample, we know that the material was iron with a BCC structure. This means that the first peak corresponds to the (110) plane, the second peak to the (200) plane, and the third peak to the (211) plane.
 
 The mean size of the gold and Fe powders also seems plausible. It is interesting to note that the iron powder was smaller than the gold powder. Both of these values, however, fall within a reasonable range for powder materials. There was also some variation in the powder size, which is expected since not all particles are exactly the same size.
