added some stuff

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -7,7 +7,7 @@ Crystal lattice structures are described by a Bravais lattice \cite{hofmann2015}
 \begin{equation}
     \mathbf{R} = n_1\mathbf{a}_1 + n_2\mathbf{a}_2 + n_3\mathbf{a}_3,
 \end{equation}
-where $\mathbf{a}_i$ are the lattice vectors. Performing a Fourier transform of the real space lattice gives the reciprocal lattice in k-space, also a Bravais lattice, which is described by the reciprocal lattice vectors $\mathbf{b}_j$ defined by $\mathbf{a}_i \cdot \mathbf{b_j} = 2\pi \delta_{ij}$ \cite{hofmann2015}. The reciprocal lattice is useful when performing diffraction experiments since the diffraction pattern is in k-space. 
+where $\mathbf{a}_i$ are the lattice vectors. Performing a Fourier transform of the real space lattice gives the reciprocal lattice in k-space, also a Bravais lattice, which is described by the reciprocal lattice vectors $\mathbf{b}_j$ defined by $\mathbf{a}_i \cdot \mathbf{b_j} = 2\pi \delta_{ij}$ \cite{hofmann2015}. The reciprocal lattice is useful when performing diffraction experiments since the diffraction pattern is in k-space. So by performing a Fourier transform of the reciprocal lattice we obtain the real space lattice and obtain information about the crystal structure.
 
 To calculate the distance between planes the formula 
 \begin{equation}
