more minor stuff

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -72,7 +72,7 @@ The order of the peaks we will see will be ordered as
 where h, k and l are the miller indices of that specific plane. Thus, for a BCC crystal the peaks will be in the order (110), (200), (211), (220) and so on. For the FCC the peaks will be (111), (200), (220), (311), (222) and so on.  
 
 \subsection{Powder X-ray Diffraction}
-Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures.
+Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures. It is also important for PXRD that the X-ray beam is collimated to minimize beam divergence as this will affect the broadening of the diffraction rings and give less accurate results.
 
 Scherrer's formula is used to estimate the size of crystallites based on the broadening of diffraction peaks as 
 \begin{equation}
