--- a/PXRD_report/Textfiles/5.Conclusion.tex
+++ b/PXRD_report/Textfiles/5.Conclusion.tex
@@ -1,3 +1,3 @@
 \section{Conclusion}
-In this lab, X-ray powder diffraction (PXRD) was used to analyze the crystal structures of two unknown samples. By applying Bragg’s law and structure factor analysis, Sample 1 was identified as gold (Au) with an FCC structure, while Sample 2 was identified as iron (Fe) with a BCC structure. The calculated lattice parameter for Sample 1 matched tabulated values exactly, whereas Sample 2 showed a close match with minor deviations, likely due to experimental uncertainties such as instrumental broadening, beam divergence, and spectral bandwidth limitations. Additionally, the Scherrer equation was used to estimate the crystallite size of both samples, yielding values in the range of a couple of nanometers for the gold powder and a couple nanometers for the iron powder with mean values around 10 nanometers. Overall, the results demonstrated the effectiveness of PXRD in identifying material types and determining their crystalline structures.
+In this lab, X-ray powder diffraction (PXRD) was used to analyse the crystal structures of two unknown samples. By applying Bragg’s law and structure factor analysis, Sample 1 was identified as gold (Au) with an FCC structure, while Sample 2 was identified as iron (Fe) with a BCC structure. The calculated lattice parameter for Sample 1 matched tabulated values exactly, whereas Sample 2 showed a close match with minor deviations, likely due to experimental uncertainties such as instrumental broadening, beam divergence, and spectral bandwidth limitations. Additionally, the Scherrer equation was used to estimate the crystallite size of both samples, yielding values in the range of a couple of nanometres for both samples with mean values around 10 nanometres. Overall, the results demonstrated the effectiveness of PXRD in identifying material types and determining their crystalline structures.
 
