--- a/PXRD_report/Textfiles/2.Method.tex
+++ b/PXRD_report/Textfiles/2.Method.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Method}
 The experimental setup consisted of an X-ray source pointing on a sample of powdered crystal. The sample was placed on a diffractometer connected to a computer to control the placement of the sample. Behind the sample was a large area detector used to capture the diffraction rings. The setup can bee seen in \ref{fig:setup}
 \begin{figure}[H]
