--- a/PXRD_report/Textfiles/4.Discussion.tex
+++ b/PXRD_report/Textfiles/4.Discussion.tex
@@ -1,3 +1,4 @@
+\newpage
 \section{Discussion}
 The uncertainties of the Gaussian fit can be seen in \autoref{tab:sample1} and \autoref{tab:sample2}. We can see that the calculated lattice constant for Sample 1, which is made of gold, includes the tabulated value within its uncertainty. However, this is not true for the second sample, made of iron. The calculated lattice constant for Sample 2 deviates by only 1\% from the tabulated value. Thus, one can argue that this is close enough for us to validate the result. The small deviation in Sample 2 might be due to other errors that have not been accounted for, such as errors in the X-ray energy and measurement equipment. Errors such as beam divergence, finite spectral bandwidth, and detector resolution also contribute to uncertainties.
 
